fix: disable horizontal scroll on long text

--- a/src/dev.style.sass
+++ b/src/dev.style.sass
@@ -1,17 +1,10 @@
 // DEV: disable these when 'production' bilding
 
-.s1, .s2,
-.s3, .s4,
-.s5, .s6
-  // display: none !important
+// .s1,
+// .s2,
+// .s3, 
+// .s4,
+//   display: none !important
 
-.grid-item,
-.s4-grid-cell,
-.archive-item
-  // box-shadow: 0px 0 0 1px green
-
-.section
-  border: 1px dashed rgba(white, 0.5)
-
-section.hidden
-  // display: block !important
+// .section
+//   border: 1px dashed rgba(white, 0.5)
